criando versao alternativa com elementos separados na lista para fazer persistencia.