@@ -1,6 +1,8 @@
 import play.PlayJava
 
 
+javaOptions ++= Seq("-Xmx128M", "-Xmx256M", "-XX:MaxPermSize=128M")
+
 
 val appName         = "BaseEmprego"
 val appVersion      = "1.0alfa"
